fix(examples): ten demonstrations that failed on their own body, not on a finding
Each of these tells a reader "Remove @Disabled to see X detected by YDetector".
Enabled, they did go red, but on an AssertionError from the example itself, so
the detector was never consulted and its report was never read. Measured over
three full reactor runs on 2026-08-26.

Eight were the same shape: the subject's corruption is the bug, and the body let
it escape. A shared SimpleDateFormat throws NumberFormatException out of a
half-written buffer, a shared Mac throws "arraycopy: length -21 is negative", an
unguarded ArrayList throws ConcurrentModificationException, and a HashMap cache
returns null for a key it was just given. Those are evidence. They are now
recorded, or absorbed where the detector has no API for them, so the run reaches
the failOn gate and fails on the finding. 56-lock-downgrade already had the rule
in a comment; this applies it.

41-concurrent-modification was worse than it looked. Every record* method on
ConcurrentModificationDetector begins with a lookup by identity and returns
silently when the collection is unknown, and the example never registered one,
so every recording was a no-op. The raw ConcurrentModificationException hid that
by failing the run first.

26-future-blocking and 28-lazy-init were the last two instances of issue #346's
first cause, and they escaped that audit because it looked for demonstrations
that passed and these failed. Both recorded into a locally constructed detector
the runner never reads, so failOn had nothing to gate on however the subject
behaved; both then analyzed that local instance in the test body and asserted on
it, which the first thread through always loses because its peers have not
recorded anything yet.

26 now drives the real starvation: processBatch runs on the pool it submits to,
which is the misuse the service documents, with a bounded wait so the round ends.
28 has no demonstration any more, the second acceptance pa